--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@adminjs/express": "^6.0.1",
     "@adminjs/prisma": "^5.0.1",
+    "@prisma/client": "^5.6.0",
     "adminjs": "7.3.0",
     "connect-mysql": "^4.0.0",
     "connect-mysql-session": "^0.1.3",
