--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon ./src/app.js",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "keywords": [],
   "author": "",
@@ -26,13 +32,20 @@
     "express-sequelize-session": "^0.4.0",
     "express-session": "^1.17.3",
     "formidable": "^3.5.1",
+    "joi": "^17.11.0",
     "mysql": "^2.18.1",
-    "url": "^0.11.3"
+    "nanoid": "^5.0.3",
+    "url": "^0.11.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@types/jest": "^29.5.10",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.53.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.5.2"
   }
