add a few configuration eslint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["adminjs", "Diskriminasi", "Laporan", "uuidv"]
+  "cSpell.words": ["adminjs", "Berita", "Diskriminasi", "Fasyankes", "Laporan", "uuidv"]
 }
