--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "@adminjs/express": "^6.1.0",
+    "@adminjs/import-export": "^3.0.0",
+    "@adminjs/passwords": "^4.0.0",
     "@adminjs/prisma": "^5.0.1",
+    "@adminjs/relations": "^1.0.0",
+    "@adminjs/themes": "^1.0.1",
+    "@adminjs/upload": "^4.0.1",
     "@prisma/client": "^5.6.0",
+    "admin-bro": "^4.0.1",
     "adminjs": "^7.4.1",
+    "argon2": "^0.31.2",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
     "joi": "^17.11.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "latest",
     "uuid": "^9.0.1"
   },
