--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "cSpell.words": ["adminjs", "Berita", "Diskriminasi", "Fasyankes", "Laporan", "uuidv"]
+  "cSpell.words": [
+    "adminjs",
+    "Berita",
+    "Diskriminasi",
+    "Fasyankes",
+    "gambar",
+    "judul",
+    "Laporan",
+    "Pengguna",
+    "resave",
+    "sumber",
+    "uuidv"
+  ]
 }
